force-app/main/default/objects/Payment__c/fields/Archived_Account__c.field-meta.xml
<CustomField>
    <fullName>Archived_Account__c</fullName>
    <label>Archived Account</label>
    <length>255</length>
    <referenceTo>ArchivedAccount__x</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>ExternalLookup</type>
</CustomField>