force-app/main/default/objects/Payment__c/fields/Credit_Card_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Card Expiry Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>