force-app/main/default/objects/Payment__c/fields/Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>